# Axionet-LB

./: .env.example  .gitignore  CURSOR_INSTRUCTIONS_AX_LB.md  README.md  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_app_meta.py  0002_physical_interfaces.py  0003_networks.py  0004_service_instances.py  0005_config_revisions.py  0006_interface_management.py  0007_audit_events.py  0008_users.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  frr.py  haproxy.py  instances.py  interfaces.py  networks.py  revisions.py  router.py  service_definitions.py  system.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  app_meta.py  audit_event.py  config_revision.py  network.py  network_attachment.py  physical_interface.py  service_instance.py  user.py
backend/app/plugins/: base.py  catalog.py  registry.py
backend/app/schemas/: auth.py  frr.py  haproxy.py  instances.py  interfaces.py  networks.py  revisions.py  system.py
backend/tests/: conftest.py  test_attachment_validation.py  test_auth.py  test_frr_api.py  test_frr_renderer.py  test_haproxy_api.py  test_haproxy_editor.py  test_haproxy_metrics.py  test_haproxy_renderer.py  test_instances_api.py  test_interface_management.py  test_interfaces_api.py  test_network_metrics.py  test_network_validation.py  test_networks_api.py  test_revisions_api.py  test_sysfs_scanner.py  test_system_health.py  test_system_metrics.py  test_system_orphans.py
(+95 files in other folders)
